Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2285

Completion in QML editor doesn't work when the word is prefixed with a - (minus) character.

    XMLWordPrintable

Details

    • 81b96e474db68f7e8448ddc88bb9e220c02e1497

    Description

      It's not uncommon to negate a value by prefixing a minus, but unfortunately this makes the completion no longer work.

      Other characters like (, ), [, ], etc. seem to not cause the same problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ckamm Christian Kamm
            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes