QmlJS: Offer completion for words prefixed with +, -, *, /.

Task-number: QTCREATORBUG-2285
Reviewed-by: Roberto Raggi